--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,20 @@
     <application
         android:name=".retrofit.NotificationClass"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TradeGo"
         android:usesCleartextTraffic="true"
-        tools:targetApi="m"
-        android:fullBackupContent="true">
+        tools:targetApi="m">
+        <activity
+            android:name=".activities.BuyProduct_ConfirmPage"
+            android:exported="true" />
+        <activity
+            android:name=".activities.BuyProduct_VerifyPage"
+            android:exported="true" />
         <activity
             android:name=".activities.UserCart"
             android:exported="true" />
@@ -31,7 +37,8 @@
         <activity android:name=".activities.Home" />
         <activity android:name=".activities.Register" />
         <activity android:name=".activities.Login" />
-        <activity android:name=".activities.SplashScreen"
+        <activity
+            android:name=".activities.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
